test/cli/test-generate/namespaced-clone-source/generated.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: copy
  namespace: tenant
data:
  value: tenant
