test/cli/test-generate/namespaced-clone-source/source.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: source
  namespace: tenant
data:
  value: tenant
