test/cli/test-generate/namespaced-clone-source/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespaced-clone-source
policies:
- policy.yaml
resources:
- trigger.yaml
results:
- cloneSourceResource: source.yaml
  generatedResource: generated.yaml
  kind: ConfigMap
  policy: tenant/namespaced-clone-source
  resources:
  - tenant/clone-trigger
  result: pass
  rule: copy
